# Charon

./: .gitignore  Cargo.toml  winston.db
10_container/: .env.remote  docker-compose.yml  up_local.sh  up_remote.sh
10_container/app/: Dockerfile
10_container/mariadb/: init.sh
10_container/nginx/: nginx.conf  nginx.conf.remote
81_access/: .env  Cargo.toml
81_access/2023-05-11-212958_initialize/: down.sql
81_access/migrations/2024-05-09-184601_initialize/: down.sql  up.sql
81_access/src/: global.rs  lib.rs  schema.rs
81_access/src/access/: database.rs  entity.rs
82_controller/: Cargo.toml
85_cli/: Cargo.toml
86_web-api/: Cargo.toml
container/: .env.local  docker-compose.yml  up_local.sh  up_remote.sh
container/app/: Dockerfile
container/mariadb/: Dockerfile  init.sh
corelib/: Cargo.toml
corelib/src/: .env  Cargo_.toml
corelib/src/access/: database.rs
doc/: charon.dbs
migrations/2023-05-11-212958_initialize/: down.sql  up.sql
src/: main.rs  schema.rs
src/http/: config.rs
web-api/: Cargo.toml
web-api/src/: main.rs
