[package]
name = "Winston"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "2.0.2", features = ["sqlite", "uuid", "chrono", "r2d2"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }