[package]
name = "access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["mysql", "uuid", "chrono", "r2d2"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
lazy_static = "1.4.0"
bcrypt = "0.15"       # Password hash generation

[dependencies.common]
path = "../80_common"
